dashboard/scss/entry.scss
#entries-div {
    padding: 20px;
    display: flex;
    align-items: center;
    flex-direction: column;
    font-size: 15px;
}

#no-entries {
    font-size: 20px;
    padding: 30px;
    color: #AAA;

}

/* width and height of the entry row */
$entry-width: 850px;
$entry-height: 30px;

/* width for each caption and field */
$orig-url-width: 300px;
$short-url-width: 250px;
$click-cnt-width: 65px;
$creation-date-width: 120px;
$operation-width: 80px;

#entries-caption-div {
    width: $entry-width;
    padding: 15px 2px;
}

.entry{
    width: $entry-width;
    height: $entry-height + 10px;
    padding: 5px 2px;
    border-radius: 20px;
    position: relative;
    &:hover {
        background-color: #EEE;
    }
}

@mixin no-overflow {
    overflow:hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.entry > div {
    @include no-overflow;
}

.entry-btn {
    border-radius: 50%;
    width: 30px;
    height: 30px;
    background-color: transparent;
    border: transparent;
    cursor: pointer;
    -webkit-transition: all 0.5s; 
    transition: all 0.5s; 
    display: none;
    .entry:hover & {
        display: inline-block;
    }
    &:hover {
        background-color: #CCC;
    }
}

/* Delete Related */

.confirm-tip {
    margin: 10px;
    text-align: center;
    &-info {
        font-size: 15px;
        margin-bottom: 10px;
    }
    &-btn {
        color: red;
        padding: 2px;
        font-size: 15px;
        height: 30px;
        width: 100px;
        border-radius: 5px;
        border: 3px solid red;
        background: white;
        -webkit-transition: all 0.5s;
        transition: all 0.5s;
        &:hover, &:focus {
            background: red;
            color: white;
        }
    }
}

$delete-mask-color: #F77;
$delete-text-color: #FFF;

@keyframes delete {
    0% {
        right: 100%;
        background-color: $delete-mask-color;
        color: $delete-mask-color;
    }
    25% {
        right: 0;
        background-color: $delete-mask-color;
        color: $delete-mask-color;
    }
    50% {
        right: 0;
        color: $delete-text-color;
        background-color: $delete-mask-color;
    }
    100% {
        right: 0;
        color: $delete-text-color;
        background-color: $delete-text-color;
    }
}

.entry-deleted-mask {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 100%;
    border-radius: 20px;
    font-size: 17px !important;
    letter-spacing: 3px;
    line-height: 40px;
    font-weight: 800;
    text-transform: uppercase;
    z-index: 10;
    display: none;
    &.show {
        display: block;
        animation-name: delete;
        animation-duration: 1s;
        animation-fill-mode: forwards;
    }
}

/* Field related */

.caption, .entry-field {
    line-height: $entry-height;
    display: inline-block;
    padding: 0 5px;
    text-align: center;
}

.url-field {
    text-align: left;
}

.short-url {
    display: inline-flex;
    & .url-div {
        @include no-overflow;
        max-width: $short-url-width - 40px - 5px;
        margin-right: 5px;
    }
}

/* set width for each caption and field */ 

#orig-url-caption, .orig-url { width: $orig-url-width; }
#short-url-caption, .short-url { width: $short-url-width; }
#click-cnt-caption, .click-cnt { width: $click-cnt-width; }
#creation-date-caption, .creation-date { width: $creation-date-width; }
#operation-caption, .operation { width: $operation-width; }

